# api

./: .env  .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs
src/api/auth/: login.rs  mod.rs  signup.rs
src/api/auth/verify/: confirm.rs  mod.rs  send.rs
src/repository/: auth.rs  database.rs  users.db
src/repository/auth/: login.rs  mod.rs  signup.rs  verify.rs
