[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
actix-web = { version="4.9.0", features = ["macros"] }
serde = { version="1.0.217", features = ["derive"] }
rusqlite = "0.33.0"
regex = "1.11.1"
uuid = { version = "1.12.1", features = ["v4"] }
bcrypt = "0.16.0"
image = "0.25.5"
minifb = "0.28.0"
rand = "0.9.0"